--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           sudo apt install tar gzip build-essential
           cd  dist
       - name: Code Build
-        run: docker build ./Dockerfile 
+        run: docker build ./WechatBot2
 #       - name: upload all aritifacts
 #         uses: actions/upload-artifact@v3
 #         with:
