--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
 #           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Install docker
+        uses: papodaca/install-docker-action@main
+          docker --version
 #       - name: Build and push
 #         uses: docker/build-push-action@v4
 #         with:
