--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Install docker
         uses: papodaca/install-docker-action@main
-          docker --version
+         # docker --version
 #       - name: Build and push
 #         uses: docker/build-push-action@v4
 #         with:
