--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Check Docker Version
+        run: docker --version
 #       - name: Login to Docker Hub
 #         uses: docker/login-action@v2
 #         with:
@@ -22,8 +24,8 @@ jobs:
 #           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Install docker
-        uses: papodaca/install-docker-action@main
+#       - name: Install docker
+#         uses: papodaca/install-docker-action@main
          # docker --version
 #       - name: Build and push
 #         uses: docker/build-push-action@v4
@@ -36,8 +38,8 @@ jobs:
           sudo apt update
           sudo apt install tar gzip build-essential
           cd  dist
-      - name: Code Build
-        run: docker build .
+#       - name: Code Build
+#         run: docker build .
 #       - name: upload all aritifacts
 #         uses: actions/upload-artifact@v3
 #         with:
