--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Check Docker Version
         run: docker --version
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Login to Docker Hub
+#         uses: docker/login-action@v2
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 #       - name: Build and push
@@ -36,13 +36,13 @@ jobs:
           sudo apt install tar gzip build-essential
           ls
           cd  dist
-      - name: Code Build
-        run: docker build .
-#       - name: upload all aritifacts
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: dist
-#           path: ./dist
+#       - name: Code Build
+#         run: docker build .
+      - name: upload all aritifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: ./dist
 #       - name: Setup JFrog CLI for integration
 #         uses: jfrog/setup-jfrog-cli@v3
 #         env:
