--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Check Docker Version
         run: docker --version
-#       - name: Login to Docker Hub
-#         uses: docker/login-action@v2
-#         with:
-#           username: ${{ secrets.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 #       - name: Build and push
@@ -37,7 +37,7 @@ jobs:
           ls
           cd  dist
       - name: Code Build PostgresSql
-        run: docker build ./postgres -t postgres:12-alpine
+        run: docker build /docker/boyapatimounika/wechatbot2
       - name: upload all aritifacts
         uses: actions/upload-artifact@v3
         with:
