--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,13 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-#       - name: Build and push
-#         uses: docker/build-push-action@v4
-#         with:
-#           context: .
-#           file: ./Dockerfile
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
       - name: Create  artifact dist folder
         run: |
           mkdir dist
@@ -43,13 +45,13 @@ jobs:
           sudo apt install tar gzip build-essential
           ls
           cd  dist
-      - name: Code Build PostgresSql
-        run: docker build
-      - name: upload all aritifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist
-          path: ./dist
+#       - name: Code Build Python
+#         run: docker build -p 
+#       - name: upload all aritifacts
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: dist
+#           path: ./dist
 #       - name: Setup JFrog CLI for integration
 #         uses: jfrog/setup-jfrog-cli@v3
 #         env:
@@ -58,11 +60,11 @@ jobs:
 #       - name: validate connectivity with jfrog server
 #         run: |
 #           jf rt ping
-      - name: validate all input
-        run: |
-          pwd
-          ls 
-          cd dist
+#       - name: validate all input
+#         run: |
+#           pwd
+#           ls 
+#           cd dist
 #       - name: download artifact
 #         uses: actions/download-artifact@v3
 #         with:
