--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
           python --version
           python -m pip install --upgrade pip
           python -m pip install mypy black ruff pydantic sqlalchemy
-      - name: Setup Poetry
-        uses: pronovic/setup-poetry@v1
+#       - name: Setup Poetry
+#         uses: pronovic/setup-poetry@v1
       - name: Check Docker Version
         run: docker --version
       - name: Login to Docker Hub
@@ -47,7 +47,7 @@ jobs:
           ls
           cd  dist
       - name: Code Build Python
-        run: docker build . --file Dockerfile --tag my-app-dotnet:$(date +%s)
+        run: docker build . --file Dockerfile --tag my-app-python:$(date +%s)
 #       - name: upload all aritifacts
 #         uses: actions/upload-artifact@v3
 #         with:
