--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,8 @@ jobs:
           ls
           cd  dist
       - name: Code Build Python
-        run: docker build . --file Dockerfile --tag my-app-dotnet:$(date +%s)
+        working-directory: WechtBot2
+        run: docker build . --file Dockerfile --tag my-app-python:$(date +%s)
 #       - name: upload all aritifacts
 #         uses: actions/upload-artifact@v3
 #         with:
